Fix for button icon alignment

--- a/src/app/widgets/JogControl/numberInput.styl
+++ b/src/app/widgets/JogControl/numberInput.styl
@@ -63,13 +63,15 @@
   border: none;
   position: relative;
   text-align: center;
-  min-width: 25px;
+  width: 30px;
   font-size: 10px;
   outline: none;
   display: flex;
   flex-grow: 1;
   margin: 0;
-  padding: .25rem;
+  padding: 0
+  justify-content center;
+  align-items center;
   border-radius: 0;
   flex-direction: column;
   height: 100%;
